--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <script src="js/lib/underscore-min.js"></script>
         <script src="js/lib/backbone-min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.min.js"></script>
-        <script src="http://d3js.org/d3.v3.min.js"></script>
-        <script src="js/data-csv.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.8.0/d3.min.js"></script>
+        <script src="js/data-csv2.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
