--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/styles.css">
-
-        <script src="js/lib/modernizr-2.6.2.min.js"></script>
         <style>
                 svg{
                     height: 500px;
@@ -27,8 +25,10 @@
         <script src="js/lib/underscore-min.js"></script>
         <script src="js/lib/backbone-min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.8.0/d3.min.js"></script>
-        <script src="js/data-csv2.js"></script>
-        <script src="js/main.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.min.js"></script>
+        <script src="js/script.js"></script>
+        {#<script src="js/data-csv2.js"></script>#}
+        <script src="js/main2.js"></script>
     </body>
 </html>
